Added UpdateProduct Command Added Unit Tests Added Validation
